Adapt to new deckz directory structure
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

Former-commit-id: 93426c03dc4b43f19a3eac95d384ab7ceac2034e [formerly da00c7d03089905719622d925436ce0c34438cad]
Former-commit-id: e2bf9d56371efb49fa11ee81e97c5f9d911de723

--- a/jinja2/v1.tex.jinja2
+++ b/jinja2/v1.tex.jinja2
@@ -4,6 +4,8 @@
 
 \documentclass[\PresentationSize\BLOCK{if handout},handout\BLOCK{endif}]{formation}
 
+\setbeamertemplate{frame footer}{\CompanyName{} --- \DeckTitle}
+
 \author{\vfill\TrainerName}
 \institute{%
   \vfill%
@@ -32,3 +34,4 @@
 %% endfor
 
 \end{document}
+
