Use target name as convention for local includes
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/jinja2/v1.tex.jinja2
+++ b/jinja2/v1.tex.jinja2
@@ -1,4 +1,4 @@
-%% for k, v in config
+%% for k, v in config.items()
 \newcommand{\\VAR{k | camelcase}}{\VAR{v}}
 %% endfor
 
@@ -16,7 +16,7 @@
 \date{\vfill\SessionStart--\SessionEnd}
 
 \title{\DeckTitle}
-\subtitle{\VAR{target_title}}
+\subtitle{\VAR{target.title}}
 
 \begin{document}
 
@@ -26,10 +26,10 @@
 \tableofcontents[subsectionstyle=hide]
 \end{frame}
 
-%% for section in sections:
+%% for section in target.sections:
 \section{\VAR{section.title}}
 %% for include in section.includes:
-\input{\VAR{include}}
+\input{\VAR{[target.name, include] | path_join}}
 %% endfor
 %% endfor
 
