Change in jinja2/ with a flag to compile tableofcontent or not. flag 'programme' in deck-config.yml

--- a/jinja2/v1.tex.jinja2
+++ b/jinja2/v1.tex.jinja2
@@ -22,9 +22,11 @@
 
 \maketitle
 
+%% if "programme" not in config or config["programme"]:
 \begin{frame}{Programme}
 \tableofcontents[subsectionstyle=hide]
 \end{frame}
+%% endif
 
 %% for section in target.sections:
 \section{\VAR{section.title}}
