Remove date from template
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/jinja2/v1.tex.jinja2
+++ b/jinja2/v1.tex.jinja2
@@ -13,8 +13,7 @@
   \newline%
   \url{\CompanyWebsite}%
 }
-\date{\vfill\SessionStart--\SessionEnd}
-
+\date{}
 \title{\DeckTitle}
 \subtitle{\VAR{target.title}}
 
