Use latest deckz version and adapt for it
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/jinja2/main.tex.jinja2
+++ b/jinja2/main.tex.jinja2
@@ -4,6 +4,15 @@
 
 \documentclass[\PresentationSize\BLOCK{if handout},handout\BLOCK{endif}]{formation}
 
+%% if print:
+\renewcommand{\bluelink}[2]{%
+  {%
+    \color{blue}%
+    \url{#1}%
+  }%
+}
+%% endif
+
 \setbeamertemplate{frame footer}{\CompanyName{} --- \DeckTitle}
 
 \author{\vfill\TrainerName}
